loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: '<-' expected but ')' found.
for(compteur<-1 to 11; compteur2<1 to 4){
                                       ^LoopCourse:9: error: illegal start of simple expression
	}
        ^